test/libsolidity/syntaxTests/parsing/pragma_illegal.sol
pragma ``;
// ----
// ParserError 6281: (7-8): Token incompatible with Solidity parser as part of pragma directive.
// ParserError 6281: (8-9): Token incompatible with Solidity parser as part of pragma directive.
